--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Scrim-s027ic2",
-  "description": "https://scrimba.com/fullstack-path-c0fullstack/~02e/s0ctqq1a3j/head",
+  "name": "Scrim-s039ubl",
+  "description": "https://scrimba.com/fullstack-path-c0fullstack/~03t/s0lnubn8su/head",
   "scripts": {
     "start": "vite",
     "dev": "vite",
